argoproj/ark-survival-ascended/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ark-server
  namespace: ark-survival-ascended
  labels:
    app: ark-server
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ark-server
  template:
    metadata:
      labels:
        app: ark-server
    spec:
      securityContext:
        runAsUser: 10000
        runAsGroup: 10000
        fsGroup: 10000
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regcred
      containers:
      - name: ark-server
        image: 839695154978.dkr.ecr.ap-northeast-1.amazonaws.com/ark-ascended-server:f1e12967d44d32ebd6bbda757cb4adc5eb72078b
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
        ports:
        - name: game-port
          containerPort: 7777
          protocol: UDP
        - name: game-port-2
          containerPort: 7778
          protocol: UDP
        - name: query-port
          containerPort: 27015
          protocol: UDP
        - name: rcon-port
          containerPort: 27020
          protocol: TCP
        volumeMounts:
        - name: ark-data
          mountPath: /home/steam/ark/ShooterGame/Saved
        resources:
          requests:
            memory: "13Gi"
            cpu: "2000m"
          limits:
            memory: "16Gi"
            cpu: "4000m"
      volumes:
      - name: ark-data
        persistentVolumeClaim:
          claimName: ark-server-data-claim
