argoproj/ark-survival-ascended/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ark-server-service
  namespace: ark-survival-ascended
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "5000"
    prometheus.io/path: "/metrics"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.10.29
  selector:
    app: ark-server
  ports:
  - name: game-port
    protocol: UDP
    port: 7777
    targetPort: game-port # DeploymentのcontainerPort名に合わせる
  - name: game-port-2
    protocol: UDP
    port: 7778
    targetPort: game-port-2 # DeploymentのcontainerPort名に合わせる
  - name: query-port
    protocol: UDP
    port: 27015
    targetPort: query-port # DeploymentのcontainerPort名に合わせる
  - name: rcon-port
    protocol: TCP
    port: 27020
    targetPort: rcon-port # DeploymentのcontainerPort名に合わせる
  # 監視用ポートを追加
  - name: ark-metrics
    protocol: TCP
    port: 5000
    targetPort: ark-metrics
  - name: a2s-metrics
    protocol: TCP
    port: 9841
    targetPort: a2s-metrics
